# x-terminal-profiles

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/tp/: __main__.py  cli.py  config.py  toml_writer.py
src/tp/commands/: chrome.py  create.py  delete.py  edit.py  init.py  list.py  shell.py  show.py  verify.py
src/xtp/: __main__.py  cli.py  config.py
src/xtp/commands/: create.py  delete.py  edit.py  init.py  list.py  shell.py  show.py  verify.py
tests/: conftest.py  test_cli.py  test_config.py  test_toml_writer.py
tests/commands/: test_chrome.py  test_delete.py  test_list.py  test_show.py
