[project]
name = "terminal-profiles"
version = "0.1.0"
description = "Terminal profile manager for multi-client environment isolation"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
tp = "tp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tp"]
