[project]
name = "x-terminal-profiles"
version = "0.1.0"
description = "Terminal profile manager for multi-client environment isolation"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
xtp = "xtp.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xtp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
